--- a/kitty.conf
+++ b/kitty.conf
@@ -1,6 +1,7 @@
 # kitty.conf - Kitty Terminal Configuration File of Michael-Matta1 @ https://github.com/Michael-Matta1/dev-dotfiles
 
 # =============================================================================
+
 # Reload config: Ctrl+Shift+F5 | Edit config: Ctrl+Shift+F2
 
 # =============================================================================
@@ -366,10 +367,18 @@ map ctrl+v            no_op
 # Ctrl+X: Reserved for zsh-edit-select cut operation
 # Bound to edit-select::cut-region in zsh-edit-select.plugin.zsh
 map ctrl+x            no_op
-
 # Ctrl+A: Reserved for zsh-edit-select select-all operation
 # Bound to edit-select::select-all in zsh-edit-select.plugin.zsh
 map ctrl+a            no_op
+
+# Ctrl+Z: Reserved for zsh undo operation
+# Passes through to zsh for standard undo functionality
+map ctrl+z            no_op
+
+# Ctrl+Shift+Z: Sends CSI u sequence for redo operation in zsh line editor
+# Transmits \x1b[90;6u which zsh-edit-select binds to redo
+# Z=90, Ctrl+Shift modifier=6
+map ctrl+shift+z      send_text all \x1b[90;6u
 
 # Alternative clipboard operations using kitty modifier
 # Direct kitty clipboard access that bypasses zsh-edit-select
@@ -470,8 +479,8 @@ map alt+9             goto_tab 9
 # =============================================================================
 map kitty_mod+l       next_layout
 
-# Toggle stack layout (does not conflict with zsh zoxide binding Alt+Z)
-map kitty_mod+z       toggle_layout stack
+# Toggle stack layout
+map kitty_mod+s       toggle_layout stack
 
 # }}}
 
@@ -484,8 +493,8 @@ map kitty_mod+down    scroll_line_down
 map kitty_mod+j       scroll_line_down
 map kitty_mod+page_up   scroll_page_up
 map kitty_mod+page_down scroll_page_down
-map kitty_mod+home    scroll_home
-map kitty_mod+end     scroll_end
+map ctrl+home    scroll_home
+map ctrl+end     scroll_end
 
 # Navigate between shell prompts (requires shell_integration)
 map kitty_mod+p       scroll_to_prompt -1
