--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -205,6 +205,12 @@
     "github.copilot.nextEditSuggestions.enabled": true,
     "chat.mcp.autostart": "newAndOutdated",
     "chat.mcp.gallery.enabled": true,
+    "chat.mcp.discovery.enabled": {
+        "claude-desktop": true,
+        "windsurf": true,
+        "cursor-global": true,
+        "cursor-workspace": true,
+    },
     "chat.todoListTool.enabled": true,
     "chat.viewSessions.orientation": "stacked",
     "chat.useAgentSkills": true,
