Comment out background_opacity setting
Comment out the background_opacity setting in kitty.conf until adding a background image

--- a/kitty.conf
+++ b/kitty.conf
@@ -220,7 +220,7 @@ background_image_layout   scaled
 background_image_linear   no
 
 # Background transparency level (0.0=fully transparent, 1.0=fully opaque)
-background_opacity        0.1
+# background_opacity        0.1
 background_tint           0.98
 dynamic_background_opacity yes
 
